force-app/main/default/objects/Transaction_Item__c/fields/Budget_Period__c.field-meta.xml
<CustomField>
    <fullName>Budget_Period__c</fullName>
    <description>The budget period this transaction belongs to</description>
    <label>Budget Period</label>
    <referenceTo>Budget_Period__c</referenceTo>
    <relationshipLabel>Transaction Items</relationshipLabel>
    <relationshipName>Transaction_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>