force-app/main/default/objects/Transaction_Item__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date of the transaction</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>